--- a/signup.html
+++ b/signup.html
@@ -26,7 +26,7 @@
     <input type="text" name="inputFN" class="form-control top" placeholder="First Name" required autofocus>
     <input type="text" name="inputLN" class="form-control middle" placeholder="Last Name" required autofocus>
     <input type="email" name="inputEmail" class="form-control middle" placeholder="Email" required>
-    <input type="text" name="matrixId" class="form-control middle" placeholder="matrixID" required>
+<!--    <input type="text" name="matrixId" class="form-control middle" placeholder="matrixID" required>-->
     <input type="text" name="street" class="form-control middle" placeholder="street address" required>
     <input type="text" name="city" class="form-control middle" placeholder="city" required>
     <input type="text" name="country" class="form-control middle" placeholder="country" required>
